test/valid/objlit.js
var x = { a: 2, b: 'a' };
x;
