test/invalid/switch-2.js
switch (3) {
case 2: 'a';
case 'b': 'b';
defualt: null;
}

